[package]
name = "mine_sweeper"
version = "0.1.0"
authors = ["Alexander Öberg <stativetroller7@gmail.com>"]
edition = "2018"
default-run = "alpha_ai"

[[bin]]
name = "mine_sweeper"
path = "src/main.rs"

[[bin]]
name = "alpha_ai"
path = "src/alpha_ai.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
piston = "0.52.1"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.67.1"
piston2d-opengl_graphics = "0.76.0"
piston_window = "*"
gfx = "*"
piston2d-gfx_graphics = "0.72.0"